# tiny-unicode

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Unicode.md
include/: tiny-unicode.h
src/: tiny-unicode.c
test/: test.c
